fixed some image spacing issues

--- a/style.css
+++ b/style.css
@@ -1,27 +1,30 @@
 body {
-    width: 100%;
+    width: 960px;
     margin: 0 auto;
 }
 nav {
+    display: flex;
     background-color: grey;
+    height: 100px;
     margin: auto;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 20px;
-    padding-left: 20px;
 
 }
 
 li {
     display: inline-block;
     color: lightgrey;
-    margin: auto;
-    padding: 20px;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: auto;
+    margin-left: 20px;
 
 }
 
 .logo {
-    float: left;
+    float: left; 
+    margin-left: auto;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .image1 {
@@ -35,20 +38,20 @@ li {
 
 .image2, .image3 , .image4 {
     display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
     padding-top: 15px;
-    padding-right: 15px;
-    padding-left: 15px;
     margin-bottom: 30px;
 }
 
-.sec3 {
+.image3, .image4 {
+    padding-left: 30px;
+}
+
+/* .sec3 {
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
-}
+} */
 
 .image5, .featuredText {
     display: inline-block;
